; ModuleID = '/home/carl/AnghaBench/freebsd/sys/i386/i386/extr_copyout.c_copyout_slow0.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/i386/i386/extr_copyout.c_copyout_slow0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.copyin_arg0 = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i8*)* @copyout_slow0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copyout_slow0(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.copyin_arg0*, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.copyin_arg0*
  store %struct.copyin_arg0* %7, %struct.copyin_arg0** %5, align 8
  %8 = load %struct.copyin_arg0*, %struct.copyin_arg0** %5, align 8
  %9 = getelementptr inbounds %struct.copyin_arg0, %struct.copyin_arg0* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = load i64, i64* %3, align 8
  %13 = inttoptr i64 %12 to i8*
  %14 = load %struct.copyin_arg0*, %struct.copyin_arg0** %5, align 8
  %15 = getelementptr inbounds %struct.copyin_arg0, %struct.copyin_arg0* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @bcopy(i8* %11, i8* %13, i32 %16)
  ret void
}

declare dso_local i32 @bcopy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
